# coworker

./: .gitignore  CLAUDE.md  CLAUDE.md.template  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.sh
.github/workflows/: routing-eval.yml
evals/: IMPLEMENTATION_BRIEF.md  INSPECT_README.md  README.md  cases.json  claude_strict.md  inspect_routing.py  run_eval.py  run_inspect.py
evals/fixtures/: config_a.toml  config_b.toml  config_c.toml  safety.py  spec.md  transcript.jsonl
evals/fixtures/app/routes/: health.py  orders.py  users.py
evals/fixtures/tests/: test_sample.py
evals/results/: .gitignore  report-baseline.json  report-strict.json
examples/: demo.sh  mine-corrections.sh
src/coworker/: backend.py  config.py  models.py  safety.py  usage_log.py
src/coworker/cli/: ask_coworker.py  coworker_extract.py  coworker_model.py  coworker_write.py
tests/: conftest.py  test_backend_mock.py  test_backend_precedence.py  test_cli.py  test_config.py  test_extract.py  test_model_cli.py  test_models.py  test_routing_eval.py  test_safety.py  test_usage_log.py
