[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coworker-tools"
version = "0.1.0"
description = "Local-only AI coworker CLI for Claude Code"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0",
    "pathspec>=0.12",
    "tomli ; python_version < '3.11'",
    # coworker-model downloads GGUFs via the `hf` CLI. huggingface_hub's CLI
    # imports `click` directly, but recent typer (>=0.26) no longer pulls it
    # in transitively, so click must be declared explicitly.
    "huggingface_hub>=0.23",
    "click>=8.0",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.18"]
dev = ["pytest>=8.0"]
evals-inspect = ["inspect-ai>=0.3"]

[project.scripts]
ask-coworker = "coworker.cli.ask_coworker:main"
coworker-write = "coworker.cli.coworker_write:main"
coworker-extract = "coworker.cli.coworker_extract:main"
coworker-model = "coworker.cli.coworker_model:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
